# flame

./: CMakeLists.txt  README.md  memoryexplanation.fl  parser.md  stackerrors.fl  syntax.fl
flame/std/: Error.fl  fmt.fl  hash.fl  string.fl
flame/std/collections/: Array.fl  HeapUnion.fl  List.fl  Pair.fl  RawArray.fl  Union.fl
flame/std/hash/: wyhash.fl
flame/std/mem/: Arc.fl  Box.fl  Rc.fl
src/: analyzer.hpp  arena.hpp  compiler.cpp  compiler.hpp  lexer.cpp  lexer.hpp  main.cpp  parser.cpp  parser.hpp  simple_vec.hpp  utils.cpp  utils.hpp
stdlib/: Vector.fl  collections.fl  vec.fl
